--- a/home.html
+++ b/home.html
@@ -21,8 +21,8 @@
   <div class="up"></div>
 </div>
 
-
-<div class="container">
+<div class="box_ctn">
+  <div class="container">
       <input list="indices" placeholder="Select an index" required class="indices_search">
         <datalist id="indices">
           <option value="XAUUSD"></option>
@@ -45,6 +45,8 @@
 
       <div id="prediction_text" class="prediction_text"></div>
 </div>
+</div>
+
 
     
   </section>
